[package]
name = "gs_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.3.1" 
actix-web-actors="4.2.0"
actix = "0.13.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.26.0", features = ["full"] }
futures-util = "0.3.27"
env_logger = "0.10.0"